# parsing_dns

./: .gitignore  LICENSE  README.md  docker-compose.yaml  remote_status.py  requirements.txt
.github/workflows/: python-package.yml
app/: .update_format_datetime_db.py  config.py  mongo.py  old_start_parsing.py  parsing_script.bat  pyproject.toml  removed_status.py  requirements.txt  run.bat  settings.py  start_parsing.py  update_notification.py
app/crawler/: items.py  pipelines.py  settings.py  tasks.py
app/crawler/spiders/: dns.py
app/utils/: notifications.py
app/web/: app.py  model.py
app/web/static/css/: removed.css
app/web/templates/: base.html  index.html  navigation.html  paginator.html
crawler/: parsing_script.bat  remoted_status.py  removed_status.py
crawler/product/: items.py  pipelines.py  settings.py
crawler/product/spiders/: product_spider.py
crawler/scrapy_selenium/: middlewares.py
deploy/app/: Dockerfile
deploy/celery/: Dockerfile
deploy/nginx/: Dockerfile  default.conf
http/: app.py  models.py
http/static/: style.css
http/templates/: base.html  index.html  paginator.html
scrapy/: pyvenv.cfg
scrapy/Scripts/: activate  activate.bat  jp.py
tutorial/: markdown-apps.chelurban.ru.html  markdown-markdown.html  markdown.json  quotes-markdown.html  quotes.jl
tutorial/tutorial/: items.py  pipelines.py  settings.py
tutorial/tutorial/spiders/: quotes_spider.py
